# symphonics_tech-test

./: .gitignore  NOTES.md  architecture.drawio  main.py  pyproject.toml
app/: main.py
app/endpoints/: device.py  report.py
app/models/: device_update.py
app/repositories/: bigquery.py  pubsub.py
app/schemas/: command.py  message.py  report.py
app/services/: device.py  report.py
models/: devices.py  report.py
routes/: devices.py  report.py
services/: bigquery.py  pubsub.py
