[project]
name = "symphonics"
version = "0.1.0"
requires-python = ">=3.13"
authors = [
  {name = "Souria-Saky HOCQUENGHEM", email = "souhoc@icloud.com"}
]
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-cloud-bigquery>=3.35.0",
    "google-cloud-pubsub>=2.31.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.4",
]
